--- a/pages/admin/products.css
+++ b/pages/admin/products.css
@@ -42,10 +42,12 @@ body {
 @media (max-width: 600px) {
     img {
         margin-top: 20px;
-        width: 50px;
         height: 50px;
         float: center;
         margin-bottom: 20px;
+    }
+    .wrapper .top_navbar .logo a {
+        padding: 0 !important;
     }
 }
 
